--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-list-endpoints": "^6.0.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "query-to-mongo": "^0.10.1"
   },
   "devDependencies": {
     "dotenv": "^11.0.0",
